Page de titre, amelioration tables index, et police abbréviations

--- a/latex/modeles/affichages.tex
+++ b/latex/modeles/affichages.tex
@@ -89,8 +89,8 @@
 \newcommand{\listeTitreRessourceIndex}[1]{
     \setlength{\tabcolsep}{0.125cm} % Marge des colonnes
     \setlength{\extrarowheight}{2pt} % Marge des lignes
-    \begin{center}
-    \begin{tabular}[t]{|l|l|l|}
+    \begin{center}\small
+    \begin{tabular}[t]{|X|Y|Z|}
         \hline {\bfseries Code} & {\bfseries Nom} & {\bfseries Page} \\
         \hline
 
@@ -116,8 +116,8 @@
 \newcommand{\listeTitreSAEIndex}[1]{
     \setlength{\tabcolsep}{0.125cm} % Marge des colonnes
     \setlength{\extrarowheight}{2pt} % Marge des lignes
-    \begin{center}
-    \begin{tabular}[t]{|l|l|l|}
+    \begin{center}\small
+    \begin{tabular}[t]{|X|Y|Z|}
         \hline {\bfseries Code} & {\bfseries Titre} & {\bfseries Page} \\ \hline
 
         \forLoop{1}{\value{cptS#1}}{nosae}{ % Pour chaque SAE
