--- a/latex/ressources/R101.tex
+++ b/latex/ressources/R101.tex
@@ -47,9 +47,9 @@ d'équipements et de prise en main des fonctions de base des systèmes
 d'exploitation, l'étudiant découvrira les principaux concepts utilisés
 dans les réseaux informatiques, et commencera à comprendre le rôle et
 les principes des normes et protocoles essentiels des réseaux locaux,
-comme Ethernet, \texttt{TCP}/\texttt{IP}, \texttt{DHCP}, \texttt{DNS}.\\
+comme Ethernet, \textabbrv{TCP}/\textabbrv{IP}, \textabbrv{DHCP}, \textabbrv{DNS}.\\
 On introduira des notions de sécurité informatique (les ressources
-associées aux recommandations de l'\texttt{ANSSI}, CyberEdu, CyberMalveillance
+associées aux recommandations de l'\textabbrv{ANSSI}, CyberEdu, CyberMalveillance
 pourront servir de support).}
 
 % Contenus
@@ -62,10 +62,10 @@ pourront servir de support).}
   \item
     Découverte et prise en main du réseau local
   \item
-    Adressage \texttt{IP}v4 : classes d'adresses, masques naturels, adressage
-    statique, adressage dynamique (\texttt{DHCP})
+    Adressage \textabbrv{IP}v4 : classes d'adresses, masques naturels, adressage
+    statique, adressage dynamique (\textabbrv{DHCP})
   \item
-    Notion de routage, de passerelle et de serveur \texttt{DNS}
+    Notion de routage, de passerelle et de serveur \textabbrv{DNS}
   \end{itemize}
 \item
   Bases du système d'exploitation
@@ -96,4 +96,4 @@ pourront servir de support).}
 }
 
 % Mots-clés
-\ajoutRmotscles{Réseau, Système d'exploitation, \texttt{TCP}/\texttt{IP}, \texttt{LAN}, Hygiène informatique.}
+\ajoutRmotscles{Réseau, Système d'exploitation, \textabbrv{TCP}/\textabbrv{IP}, \textabbrv{LAN}, Hygiène informatique.}
