--- a/latex/ressources/R103.tex
+++ b/latex/ressources/R103.tex
@@ -46,10 +46,10 @@ quant à elle renforcée à travers la mise en place et la configuration de
 matériels actifs comme des commutateurs, la gestion de la sûreté de
 fonctionnement du réseau local Ethernet (\emph{spanning tree}) et la
 participation à la sécurisation du système d'information dont il est le
-support (segmentation physique et virtuelle (\texttt{VLAN})). Ces deux
+support (segmentation physique et virtuelle (\textabbrv{VLAN})). Ces deux
 compétences s'appuient sur la compréhension des mécanismes intrinsèques
-aux réseaux locaux Ethernet : adressage \texttt{MAC}, commutation/routage de
-niveau 2, \texttt{ARP}, passage d'un type de support physique à un autre,
+aux réseaux locaux Ethernet : adressage \textabbrv{MAC}, commutation/routage de
+niveau 2, \textabbrv{ARP}, passage d'un type de support physique à un autre,
 changements de débit, \ldots{}\\
 Elle contribue aussi à la compétence ``Créer des outils et applications
 informatiques pour les R\&T'' (RT3) à travers la découverte du poste
@@ -66,20 +66,20 @@ client et de son environnement logiciel.}
 \item
   Normalisation Ethernet 802 (802.1, 802.2, 802.3).
 \item
-  Commutation Ethernet : apprentissage des adresses \texttt{MAC}, diffusion,
+  Commutation Ethernet : apprentissage des adresses \textabbrv{MAC}, diffusion,
   Broadcast.
 \item
   Différents équipements actifs : commutateur, routeur\ldots{}
 \item
-  Configuration d'un réseau segmenté en \texttt{VLAN}, lien multi-\texttt{VLAN},
-  communication inter-\texttt{VLAN}.
+  Configuration d'un réseau segmenté en \textabbrv{VLAN}, lien multi-\textabbrv{VLAN},
+  communication inter-\textabbrv{VLAN}.
 \item
-  Redondance et détection de boucles dans un réseau commuté: \texttt{STP},
-  \texttt{RSTP}\ldots{}
+  Redondance et détection de boucles dans un réseau commuté: \textabbrv{STP},
+  \textabbrv{RSTP}\ldots{}
 \end{itemize}
 Sur chaque thème, faire le lien avec les notions de cybersécurité
 abordées en R101.
 }
 
 % Mots-clés
-\ajoutRmotscles{Réseaux locaux, Ethernet, Commutateurs, Routeurs, \texttt{VLAN}, 8021Q, 8021P, \texttt{STP}, \texttt{RSTP}.}
+\ajoutRmotscles{Réseaux locaux, Ethernet, Commutateurs, Routeurs, \textabbrv{VLAN}, 8021Q, 8021P, \textabbrv{STP}, \textabbrv{RSTP}.}
