--- a/latex/ressources/R105.tex
+++ b/latex/ressources/R105.tex
@@ -53,7 +53,7 @@ transmission.}
   passante,\ldots{} ) à partir de mesures
   et d'analyse des signaux
 \item
-  Prolongement possible : recettage, certification \texttt{LAN}.
+  Prolongement possible : recettage, certification \textabbrv{LAN}.
 \end{itemize}
 }
 
