--- a/latex/ressources/R109.tex
+++ b/latex/ressources/R109.tex
@@ -52,11 +52,11 @@ navigateur Web.}
 \item
   Utilisation avancée d'un navigateur Web
 \item
-  Structure d'un site Web : client-serveur, arborescence, \texttt{URL}
+  Structure d'un site Web : client-serveur, arborescence, \textabbrv{URL}
 \item
   Structure d'une page : langage à balise, mise en forme et feuilles de
   styles (notions élémentaires
-  de \texttt{CSS}), notions de \emph{responsive design}
+  de \textabbrv{CSS}), notions de \emph{responsive design}
 \item
   Contenu d'une page : éléments multimédia, encodage des caractères
 \item
@@ -66,4 +66,4 @@ navigateur Web.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Web, \texttt{HTML}, \texttt{CSS}, Client/serveur, Codage de l'information.}
+\ajoutRmotscles{Web, \textabbrv{HTML}, \textabbrv{CSS}, Client/serveur, Codage de l'information.}
