--- a/latex/ressources/R112.tex
+++ b/latex/ressources/R112.tex
@@ -31,7 +31,7 @@
 
 
 % Le descriptif
-\ajoutRancrage{Le Projet Personnel et Professionnel (\texttt{PPP}) des semestres 1 et 2 de la
+\ajoutRancrage{Le Projet Personnel et Professionnel (\textabbrv{PPP}) des semestres 1 et 2 de la
 première année de B.U.T. permet à l'étudiant :
 \begin{itemize}
 \item
