--- a/latex/ressources/R115.tex
+++ b/latex/ressources/R115.tex
@@ -47,7 +47,7 @@ Dans le cadre de cette ressource transversale, l'étudiant devra :
   \begin{itemize}
   \item
     Utilisation avancée du courriel : création d'une adresse générique,
-    utilisation du \texttt{CC} et du \texttt{CCi}.
+    utilisation du \textabbrv{CC} et du \textabbrv{CCi}.
   \item
     Utilisation d'outils collaboratifs adaptés (par ex : Mattermost,
     Slack, MSTeams, Google Drive,
@@ -55,7 +55,7 @@ Dans le cadre de cette ressource transversale, l'étudiant devra :
   \end{itemize}
 \item
   Organiser son travail et celui de l'équipe à partir d'outils de
-  planification (Gantt, \texttt{PERT})
+  planification (Gantt, \textabbrv{PERT})
 \item
   Prendre sa place dans une équipe en connaissant les différents rôles
   d'une équipe projet
