--- a/latex/ressources/R202.tex
+++ b/latex/ressources/R202.tex
@@ -52,18 +52,18 @@ client et de son environnement logiciel.}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Gestion des systèmes de fichiers (volumes, droits, types de fichiers).
+  Gestion des systèmes de fichiers (volumes, droits, types de fichiers)
 \item
-  Gestion de processus et services.
+  Gestion de processus et services
 \item
-  Gestion de ressources utilisateurs (comptes, quotas).
+  Gestion de ressources utilisateurs (comptes, quotas)
 \item
-  Scripts pour l'automatisation de séquences de commandes.
+  Scripts pour l'automatisation de séquences de commandes
 \item
-  Utilisation de fichiers de traces (logs).
+  Utilisation de fichiers de traces (logs)
 \item
   Initiation et mise en oeuvre d'infrastructures de virtualisation et/ou
-  de conteneurisation.
+  de conteneurisation
 \end{itemize}
 }
 
