--- a/latex/ressources/R203.tex
+++ b/latex/ressources/R203.tex
@@ -39,14 +39,14 @@
 \ajoutRancrage{Cette ressource apporte les connaissances et compétences de base
 nécessaires à la mise en oeuvre des services réseaux dans un système
 d'information\\
-Les services abordés sont des services essentiels à tout système
-d'information tels que le \texttt{DNS}, le \texttt{DHCP} ou le transfert de fichiers pour
-les configurations d'appareils réseaux pour n'en citer que quelques-uns.
-Cette découverte des premiers protocoles applicatifs permettra également
-de sensibiliser les étudiants aux risques de sécurité liés à la
-configuration de ces services\\
+Les services abordés sont des services essentiels à tout SI tels que le
+\textabbrv{DNS}, le \textabbrv{DHCP} ou le transfert de fichiers pour les configurations
+d'appareils réseaux pour n'en citer que quelques-uns. Cette découverte
+des premiers protocoles applicatifs permettra également de sensibiliser
+les étudiants aux risques de sécurité liés à la configuration de ces
+services\\
 On introduira des notions de sécurité informatique (les ressources
-associées aux recommandations de l'\texttt{ANSSI}, CyberEdu, CyberMalveillance
+associées aux recommandations de l'\textabbrv{ANSSI}, CyberEdu, CyberMalveillance
 pourront servir de support).}
 
 % Contenus
@@ -54,25 +54,23 @@ pourront servir de support).}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Rappels sur les protocoles de transport (\texttt{TCP}, \texttt{UDP}).
+  Rappels sur les protocoles de transport (\textabbrv{TCP}, \textabbrv{UDP})
 \item
-  Utilisation de ssh pour l'accès distant.
+  Utilisation de ssh pour l'accès distant
 \item
   Principe, installation, configuration et tests des services :
-  \begin{itemize}
-  \item
-    \texttt{DHCP};
-  \item
-    \texttt{DNS} (fonctions de base);
-  \item
-    \texttt{HTTP};
-  \item
-    \texttt{TFTP}, \texttt{FTP};
-  \item
-    \texttt{NTP}.
-  \end{itemize}
+\item
+  \textabbrv{DHCP}
+\item
+  \textabbrv{DNS} (fonctions de base)
+\item
+  \textabbrv{HTTP}
+\item
+  \textabbrv{TFTP}, \textabbrv{FTP}
+\item
+  \textabbrv{NTP}
 \end{itemize}
 }
 
 % Mots-clés
-\ajoutRmotscles{Protocoles et ports applicatifs, Services, Systèmes d'exploitation.}
+\ajoutRmotscles{Protocoles et ports applicatifs, services, systèmes d'exploitation.}
