--- a/latex/ressources/R204.tex
+++ b/latex/ressources/R204.tex
@@ -38,11 +38,11 @@
 de mise en œuvre d'un système téléphonique d'entreprise. Il permettra
 d'aborder les différents types de téléphonie (hors téléphonie mobile)
 utilisés de nos jours, que ce soit sur un réseau dédié (téléphonie
-analogique, numérique) ou un réseau partagé (\texttt{ToIP}). Une découverte des
+analogique, numérique) ou un réseau partagé (\textabbrv{ToIP}). Une découverte des
 services téléphoniques utiles à la communication dans l'entreprise sera
 réalisée, ainsi qu'une première approche des réseaux publics existants.\\
 En fonction du contexte local, on pourra orienter l'étude vers un réseau
-téléphonique mixte (\texttt{TDM}/\texttt{IP}) ou \texttt{ToIP}.}
+téléphonique mixte (\textabbrv{TDM}/\textabbrv{IP}) ou \textabbrv{ToIP}.}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -58,7 +58,7 @@ téléphonique mixte (\texttt{TDM}/\texttt{IP}) ou \texttt{ToIP}.}
 \item
   Architectures des réseaux publics et privés (commutation,
   signalisation, services, normes de câblage,
-  \texttt{PoE}).
+  \textabbrv{PoE}).
 \item
   Installation d'un système téléphonique d'entreprise
   (insertion/raccordement de postes, connexion au
@@ -72,4 +72,4 @@ informatique.
 }
 
 % Mots-clés
-\ajoutRmotscles{\texttt{IPBX}, \texttt{PABX}, \texttt{TDM}/\texttt{IP}, Postes et services téléphoniques, Visiophonie, Plan de numérotation, Réseaux téléphoniques publics.}
+\ajoutRmotscles{\textabbrv{IPBX}, \textabbrv{PABX}, \textabbrv{TDM}/\textabbrv{IP}, Postes et services téléphoniques, Visiophonie, Plan de numérotation, Réseaux téléphoniques publics.}
