--- a/latex/ressources/R205.tex
+++ b/latex/ressources/R205.tex
@@ -56,7 +56,7 @@ modifications ces signaux vont subir dans un système télécom.}
 \item
   Représentations temporelles et fréquentielles des signaux ; Analyse
   spectrale de signaux réels (par ex:
-  audio, WiFi, \texttt{ADSL}, etc.).
+  audio, WiFi, \textabbrv{ADSL}, etc.).
 \item
   Influence de la fonction de transfert d'un système sur un signal (par
   ex: audio, numérique, \ldots).
