--- a/latex/ressources/R206.tex
+++ b/latex/ressources/R206.tex
@@ -62,4 +62,4 @@ en téléphonie, ou en télécommunications numériques.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Numérisation, Échantillonnage, Quantification, Acquisition/restitution, \texttt{CAN} et \texttt{CNA}.}
+\ajoutRmotscles{Numérisation, Échantillonnage, Quantification, Acquisition/restitution, \textabbrv{CAN} et \textabbrv{CNA}.}
