--- a/latex/ressources/R207.tex
+++ b/latex/ressources/R207.tex
@@ -40,15 +40,14 @@
 % Le descriptif
 \ajoutRancrage{Le professionnel R\&T traite un grand nombre de données (par ex:
 l'annuaire des utilisateurs du réseau ou l'état des équipements
-informatiques). Elles peuvent servir à configurer ou à administrer les
+informatiques). Elles peuvent servir à configurer et à administrer les
 services réseau d'une entreprise (RT1) ou à alimenter les pages d'un
 site Web (RT3). Il est donc amené à stocker, organiser, gérer, protéger
-des données provenant de différentes sources (thématiques du
-\href{https://pix.fr/competences}{PIX}), mais aussi à les traiter en
-développant différents outils informatiques pour ses besoins personnels
-ou pour son équipe (RT3). Plus largement, il contribue activement à
-l'exploitation et à la maintenance du système d'information de
-l'entreprise.\\
+des données provenant de différentes sources (thématiques du PIX,
+cf.~https://pix.fr/competences), mais aussi à les traiter en développant
+différents outils informatiques pour ses besoins personnels ou pour son
+équipe (RT3). Plus largement, il contribue activement à l'exploitation
+et à la maintenance du système d'information de l' entreprise.\\
 Cette ressource introduit les éléments fondamentaux des systèmes de
 gestion de base de données. Elle présente différentes alternatives
 technologiques pour le stockage et le codage de l'information, en
@@ -63,13 +62,13 @@ langages et des scripts spécifiques qui seront introduits.}
   Stockage et accès aux données :
   \begin{itemize}
   \item
-    Système de gestion de données (relationnel/non relationnel);
+    système de gestion de données (relationnel/non relationnel);
   \item
-    Structuration des données: fichiers (\texttt{CSV}, \texttt{JSON}), exemples de sources
-    ouvertes (\emph{open data}), \emph{web scraping};
+    structuration des données: fichiers (\textabbrv{CSV}, \textabbrv{JSON}), exemples de sources
+    ouvertes (open data), web scraping;
   \item
-    Sensibilisation à la réglementation française et internationale
-    (\texttt{CNIL}, \texttt{RGPD}).
+    sensibilisation à la réglementation française et internationale
+    (\textabbrv{CNIL}, \textabbrv{RGPD}).
   \end{itemize}
 \item
   Base de données relationnelles :
@@ -84,7 +83,7 @@ langages et des scripts spécifiques qui seront introduits.}
     Interrogation de données, ajout et modification de données.
   \end{itemize}
 \item
-  Lecture d'une documentation technique (\texttt{UML}, diagramme de classes)
+  Lecture d'une documentation technique (\textabbrv{UML}, diagramme de classes)
 \end{itemize}
 L'utilisation de l'anglais est préconisée dans la documentation du code.
 }
