--- a/latex/ressources/R210.tex
+++ b/latex/ressources/R210.tex
@@ -53,7 +53,7 @@ contexte professionnel technique.}
   téléphonique, visioconférence,
   réunion, débat).
 \item
-  Présenter son parcours professionnel à l'oral et à l'écrit (\texttt{CV}, lettre
+  Présenter son parcours professionnel à l'oral et à l'écrit (\textabbrv{CV}, lettre
   de motivation, entretien).
 \item
   Analyser des problèmes et proposer des solutions.
@@ -63,7 +63,7 @@ contexte professionnel technique.}
   Développer le vocabulaire technique des domaines cibles.
 \item
   Extensions possibles : télécollaboration, télétandem, parcours
-  international, dispositif \texttt{EMILE}.
+  international, dispositif \textabbrv{EMILE}.
 \end{itemize}
 }
 
