--- a/latex/ressources/R213.tex
+++ b/latex/ressources/R213.tex
@@ -57,7 +57,7 @@ l'exploitation d'algorithmes mis en œuvre via un outil informatique.}
     Convergence d'une suite (opérations sur les limites)
   \end{itemize}
 \item
-  Vecteurs en \texttt{2D} et \texttt{3D}
+  Vecteurs en \textabbrv{2D} et \textabbrv{3D}
   \begin{itemize}
   \item
     Définitions
