--- a/latex/saes/SAE11.tex
+++ b/latex/saes/SAE11.tex
@@ -36,7 +36,7 @@ conscient, averti et responsable. L'hygiène informatique et les bonnes
 pratiques de l'usage du numérique sont des connaissances que doivent
 maîtriser et appliquer les étudiants avant d'aller en stage/alternance
 en entreprise, où ils devront respecter la charte informatique imposée
-par la \texttt{DSI}. A plus long terme, en tant que professionnels des services
+par la \textabbrv{DSI}. A plus long terme, en tant que professionnels des services
 informatiques de l'entreprise, ils auront à leur tour à charge de
 sensibiliser les utilisateurs et de leur faire connaître et accepter la
 charte de bon usage des moyens informatiques.}
