--- a/latex/saes/SAE11_exemple1.tex
+++ b/latex/saes/SAE11_exemple1.tex
@@ -19,7 +19,7 @@ On pourra faire un focus particulier sur les points suivants:
 \item
   Sécurité numérique : sauvegardez vos données régulièrement;
 \item
-  Appliquez les mises à jour de sécurité sur tous vos appareils (\texttt{PC},
+  Appliquez les mises à jour de sécurité sur tous vos appareils (\textabbrv{PC},
   tablettes, téléphones\ldots), et ce,
   dès qu'elles vous sont proposées;
 \item
@@ -40,10 +40,10 @@ On pourra faire un focus particulier sur les points suivants:
   sur l'usage d'un faux point d'accès WiFi et de collecter des
   identifiants de réseaux sociaux, \ldots;
 \item
-  Analysez les trames non chiffrées des protocoles (\texttt{TELNET}, \texttt{FTP}, \texttt{SMTP},
-  \texttt{POP}, \texttt{IMAP}, \texttt{RTP}, \ldots) avec Wireshark,
-  en extraire des champs significatifs avec Analyse/Follow/\texttt{TCP} Stream
-  (ou \texttt{HTTP} Stream). On peut utiliser
+  Analysez les trames non chiffrées des protocoles (\textabbrv{TELNET}, \textabbrv{FTP}, \textabbrv{SMTP},
+  \textabbrv{POP}, \textabbrv{IMAP}, \textabbrv{RTP}, \ldots) avec Wireshark,
+  en extraire des champs significatifs avec Analyse/Follow/\textabbrv{TCP} Stream
+  (ou \textabbrv{HTTP} Stream). On peut utiliser
   un site Web (création personnelle ou sur Internet) contenant un
   formulaire d'enregistrement
   (ex: \url{http://www.supportduweb.com/signup.html});
@@ -57,7 +57,7 @@ On pourra également utiliser les supports :
   Cybermalveillance:
   \url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
 \item
-  \texttt{MOOC} \texttt{ANSSI}: \url{https://secnumacademie.gouv.fr/}
+  \textabbrv{MOOC} \textabbrv{ANSSI}: \url{https://secnumacademie.gouv.fr/}
 \end{itemize}
 }
 
