--- a/latex/saes/SAE11_exemple2.tex
+++ b/latex/saes/SAE11_exemple2.tex
@@ -14,11 +14,11 @@ On pourra faire un focus particulier sur les points suivants:
 \item
   L'arnaque au faux support technique;
 \item
-  Les attaques en déni de service (\texttt{DDoS});
+  Les attaques en déni de service (\textabbrv{DDoS});
 \item
   Chantage à l'ordinateur ou à la webcam prétendus piratés;
 \item
-  L'escroquerie aux faux ordres de virement (\texttt{FOVI});
+  L'escroquerie aux faux ordres de virement (\textabbrv{FOVI});
 \item
   La défiguration de site Internet;
 \item
@@ -46,7 +46,7 @@ On pourra également utiliser les supports:
   Cybermalveillance:
   \url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
 \item
-  \texttt{MOOC} \texttt{ANSSI}: \url{https://secnumacademie.gouv.fr/}
+  \textabbrv{MOOC} \textabbrv{ANSSI}: \url{https://secnumacademie.gouv.fr/}
 \end{itemize}
 }
 
