--- a/latex/saes/SAE11_exemple3.tex
+++ b/latex/saes/SAE11_exemple3.tex
@@ -39,7 +39,7 @@ d'une bonne hygiène informatique, en découvrant :
 \item
   les dépassement de tampon;
 \item
-  les usurpations diverses (\texttt{ARP}, \texttt{DNS}, \ldots);
+  les usurpations diverses (\textabbrv{ARP}, \textabbrv{DNS}, \ldots);
 \item
   les écoutes de réseau.
 \end{itemize}
@@ -50,7 +50,7 @@ On pourra également utiliser les supports :
   Cybermalveillance:
   \url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
 \item
-  \texttt{MOOC} \texttt{ANSSI}: \url{https://secnumacademie.gouv.fr/}
+  \textabbrv{MOOC} \textabbrv{ANSSI}: \url{https://secnumacademie.gouv.fr/}
 \item
   Malette CyberEdu:
   \url{https://www.ssi.gouv.fr/entreprise/formations/secnumedu/contenu-pedagogique-cyberedu/}
