--- a/latex/saes/SAE12_exemple1.tex
+++ b/latex/saes/SAE12_exemple1.tex
@@ -14,25 +14,25 @@ caractéristiques de consommation d'énergie des équipements du réseau.}
 \ajoutESdescription{
 Il s'agit de comprendre l'agencement des briques réseaux (accès au
 réseau Internet, Box en général), des équipements (routeur, switch,
-firewall, WiFi), des terminaux (\texttt{PC}, smartphone, imprimantes, consoles de
-jeux, media-center, \texttt{NAS}, \ldots) et des protocoles (\texttt{IP}, \texttt{DHCP}, \texttt{DNS}, Mail,
+firewall, WiFi), des terminaux (\textabbrv{PC}, smartphone, imprimantes, consoles de
+jeux, media-center, \textabbrv{NAS}, \ldots) et des protocoles (\textabbrv{IP}, \textabbrv{DHCP}, \textabbrv{DNS}, Mail,
 Web, \ldots) qui permettent leur fonctionnement.\\
 On peut s'appuyer sur le réseau domestique de chaque étudiant avec une
-Box d'accès Internet (\texttt{xDSL}, \texttt{FO}), ou bien une maquette TP avec un routeur
+Box d'accès Internet (\textabbrv{xDSL}, \textabbrv{FO}), ou bien une maquette TP avec un routeur
 de sortie accédant à Internet via les ressources informatiques du
-département.On peut caractériser simplement l'adressage \texttt{IP}v4 dynamique,
-le masque de sous-réseaux, la passerelle par défaut, les serveurs \texttt{DNS}.\\
-On peut également faire paramétrer un adressage \texttt{IP}v4 statique sur un
+département.On peut caractériser simplement l'adressage \textabbrv{IP}v4 dynamique,
+le masque de sous-réseaux, la passerelle par défaut, les serveurs \textabbrv{DNS}.\\
+On peut également faire paramétrer un adressage \textabbrv{IP}v4 statique sur un
 poste client.On peut s'appuyer sur les commandes de base:
 \texttt{ipconfig}, \texttt{ifconfig}, \texttt{ip}, \texttt{ping},
 \texttt{arp}, \texttt{traceroute}, \texttt{arp-scan}
-(\emph{ArpCacheWatch} sous Windows) pour lister les adresses \texttt{MAC}
+(\emph{ArpCacheWatch} sous Windows) pour lister les adresses \textabbrv{MAC}
 présentes dans le réseau local.\\
-On peut faire découvrir les outils pour connaître son adresse \texttt{IP}
+On peut faire découvrir les outils pour connaître son adresse \textabbrv{IP}
 Publique :
 \url{https://github.com/VREMSoftwareDevelopment/WiFiAnalyzer}.\\
 Enfin, on pourra initier les étudiants les plus avancés à l'usage de la
-distribution Linux Kali en \texttt{VM} avec l'outil \texttt{nmap} pour découvrir
+distribution Linux Kali en \textabbrv{VM} avec l'outil \texttt{nmap} pour découvrir
 (en interne) les ports ouverts sur les équipements du réseau local
 domestique. Bien expliquer que l'usage de cet outil de test de
 pénétration doit être réalisé en respectant l'éthique.
