--- a/latex/saes/SAE12_exemple2.tex
+++ b/latex/saes/SAE12_exemple2.tex
@@ -5,9 +5,9 @@
 \nouvelexemple{Concevoir un réseau informatique pour une manifestation évènementielle}
 
 \ajoutESproblematique{L'objectif est d'être capable d'installer un réseau informatique avec
-l'interconnexion de switches, un routeur d'accès Internet (\texttt{FO} ou \texttt{4G}), un
+l'interconnexion de switches, un routeur d'accès Internet (\textabbrv{FO} ou \textabbrv{4G}), un
 point d'accès WiFi, savoir effectuer la segmentation du réseau,
-configurer le plan d'adressage (statique/\texttt{DHCP}) et le routage,
+configurer le plan d'adressage (statique/\textabbrv{DHCP}) et le routage,
 installation des postes clients (Windows, Linux) pour les utilisateurs.}
 
 \ajoutESdescription{
@@ -15,7 +15,7 @@ Il s'agit de répondre au cahier des charges, savoir dimensionner les
 puissances électriques de l'installation réseau et télécom, savoir
 dimensionner les équipements du réseau, assurer l'interconnexion d'une
 installation temporaire, garantir la sécurité des ports des switchs,
-utiliser des \texttt{VLAN} distincts (\emph{data}, \emph{management}), mettre en
+utiliser des \textabbrv{VLAN} distincts (\emph{data}, \emph{management}), mettre en
 place une politique sécurisée de mots de passe (utilisateurs,
 équipements), savoir monitorer les éléments actifs et observer le trafic
 sur réseau, savoir diagnostiquer les dysfonctionnements.
