--- a/latex/saes/SAE12_exemple3.tex
+++ b/latex/saes/SAE12_exemple3.tex
@@ -22,7 +22,7 @@ d'en permettre leur administration dans l'avenir.\\
 Une fois le réseau fonctionnel, définition d'un poste comme point
 d'administration. Ce poste dispose d'un accès à une interface de
 commande (console et ssh sur routeur et switch) et d'une interface
-capturant le trafic sur lien inter-\texttt{VLAN}. Possibilité d'analyser les flux
+capturant le trafic sur lien inter-\textabbrv{VLAN}. Possibilité d'analyser les flux
 sur grâce aux outils de capture des trames (Tcpdump, Wireshark).\\
 En synthèse, l'étudiant sera confronté à :
 \begin{itemize}
@@ -31,7 +31,7 @@ En synthèse, l'étudiant sera confronté à :
 \item
   Construction (sertissage) des câbles et recettes de conformité.
 \item
-  Déploiement et configuration d'un \texttt{LAN} multi-réseaux, multi-\texttt{VLAN}.
+  Déploiement et configuration d'un \textabbrv{LAN} multi-réseaux, multi-\textabbrv{VLAN}.
 \item
   Déploiement des postes clients communicants.
 \item
