--- a/latex/saes/SAE13.tex
+++ b/latex/saes/SAE13.tex
@@ -52,7 +52,7 @@ L'évaluation s'appuiera sur tout ou partie des éléments suivants :
 \item
   rapport de mesures;
 \item
-  \texttt{QCM} sur les mesures;
+  \textabbrv{QCM} sur les mesures;
 \item
   grille de suivi du travail;
 \item
