--- a/latex/saes/SAE13_exemple2.tex
+++ b/latex/saes/SAE13_exemple2.tex
@@ -8,7 +8,7 @@
 de mesure et/ou de mettre en place une liaison optique et/ou d'analyser
 la structure d'une liaison optique, de caractériser par des mesures le
 support fibre optique (crayon optique, sonde d'inspection, photométrie,
-identifier un défaut, \ldots) voire de certifier un câblage \texttt{LAN} fibre
+identifier un défaut, \ldots) voire de certifier un câblage \textabbrv{LAN} fibre
 optique. L'étudiant pourra ainsi comprendre les principaux critères de
 choix d'un support et/ou de savoir présenter des résultats à un client
 ou un collaborateur.\\
@@ -54,7 +54,7 @@ On pourra s'appuyer sur:
 \item
   rapport de mesures;
 \item
-  \texttt{QCM} sur les mesures;
+  \textabbrv{QCM} sur les mesures;
 \item
   grille de suivi du travail;
 \item
