--- a/latex/saes/SAE13_exemple4.tex
+++ b/latex/saes/SAE13_exemple4.tex
@@ -17,7 +17,7 @@ rédiger un compte-rendu de mesure.}
 L'entreprise demande à l'étudiant de caractériser par des mesures un ou
 plusieurs types de supports (retard de propagation, atténuation,
 continuité, échos, bruit, perturbations, identifier un défaut) voire de
-certifier un câblage \texttt{LAN} (cuivre, fibre, radio) afin de comprendre et
+certifier un câblage \textabbrv{LAN} (cuivre, fibre, radio) afin de comprendre et
 comparer les principaux critères de choix d'un support et/ou de savoir
 présenter des résultats à un client ou un collaborateur.\\
 L'étudiant devra s'appuyer sur ses connaissances, notamment les concepts
@@ -50,9 +50,9 @@ Exemples de mise en oeuvre :
 \item
   sur un support cuivre : mesure temporelle (échelon, sinus), retard de
   propagation, atténuation,échos
-  (réflexion), perturbations, (\texttt{GBF}, oscillo, câble);
+  (réflexion), perturbations, (\textabbrv{GBF}, oscillo, câble);
 \item
-  sur un support \texttt{FO} : soudure, crayon optique, sonde d'inspection,
+  sur un support \textabbrv{FO} : soudure, crayon optique, sonde d'inspection,
   photométrie;
 \item
   sur un support radio : atténuation,\ldots{}
@@ -70,7 +70,7 @@ On pourra s'appuyer sur:
 \item
   rapport de mesures ;
 \item
-  \texttt{QCM} sur les mesures;
+  \textabbrv{QCM} sur les mesures;
 \item
   grille de suivi du travail;
 \item
