--- a/latex/saes/SAE14_exemple1.tex
+++ b/latex/saes/SAE14_exemple1.tex
@@ -36,13 +36,13 @@ Le contenu du site pourra par exemple :
 Un affichage en anglais de tout ou partie pourra être envisagé.\\
 Une attention particulière sera portée sur les contenus eux-mêmes qui
 pourront par exemple être travaillés de concert avec les enseignants de
-communication, d'anglais, de \texttt{PPP} et d'informatique.\\
+communication, d'anglais, de \textabbrv{PPP} et d'informatique.\\
 La réalisation pourra éventuellement utiliser un système de gestion de
 contenu (CMS, par exemple Wordpress).\\
 Le travail pourra être intégré au portfolio de l'étudiant.
 }
 
-\ajoutESformes{TP, projet, séminaire de traces dans le cadre du \texttt{PPP}.}
+\ajoutESformes{TP, projet, séminaire de traces dans le cadre du \textabbrv{PPP}.}
 
 
 
