--- a/latex/saes/SAE15_exemple1.tex
+++ b/latex/saes/SAE15_exemple1.tex
@@ -63,7 +63,7 @@ différentes étapes :
   \item
     de sites web ;
   \item
-    d'\texttt{API}, par exemple l'\texttt{API} Google pour cartographie permettant de
+    d'\textabbrv{API}, par exemple l'\textabbrv{API} Google pour cartographie permettant de
     traiter des données de géolocalisation,
     ou des sources ouvertes;
   \item
