--- a/latex/saes/SAE16.tex
+++ b/latex/saes/SAE16.tex
@@ -26,7 +26,7 @@
 \ajoutSac{AC0211}{Mesurer et analyser les signaux}
 \ajoutSac{AC0212}{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}
 \ajoutSac{AC0213}{Déployer des supports de transmission}
-\ajoutSac{AC0214}{Connecter les systèmes de \texttt{ToIP}}
+\ajoutSac{AC0214}{Connecter les systèmes de \textabbrv{ToIP}}
 \ajoutSac{AC0215}{Communiquer avec un client ou un collaborateur}
 
 \ajoutScompetence{RT3-Programmer}{\niveauA}
@@ -50,7 +50,7 @@ documente et analyse sa trajectoire de développement en mobilisant des
 traces, des preuves issues de l'ensemble des mises en situation
 professionnelle (SAÉ) qu'il a vécues.\\
 Le portfolio est un élément structurant des formations en Approche Par
-Compétence (\texttt{APC}). En effet, le portfolio :
+Compétence (\textabbrv{APC}). En effet, le portfolio :
 \begin{itemize}
 \item
   soutient l'apprentissage par la constitution d'un dossier de traces
@@ -83,9 +83,9 @@ professionnelle vécues (SAÉ), le portfolio nécessite la mobilisation et
 la combinaison de ressources telles que l'expression et la
 communication. Et parce que cette démarche portfolio repose sur une
 démonstration par l'apprenant de sa professionnalisation, le portfolio
-s'appuie nécessairement sur le \texttt{PPP} en tant que ressource.\\
+s'appuie nécessairement sur le \textabbrv{PPP} en tant que ressource.\\
 Aussi, parallèlement à ses objectifs traditionnels issus de l'expérience
-acquise dans le cadre du DUT, le \texttt{PPP} devra, tel un fil conducteur,
+acquise dans le cadre du DUT, le \textabbrv{PPP} devra, tel un fil conducteur,
 permettre à l'étudiant d'être guidé dans la compréhension et
 l'appropriation de son cursus de formation, ainsi que dans la
 méthodologie d'écriture du portfolio.\\
