--- a/latex/saes/SAE21.tex
+++ b/latex/saes/SAE21.tex
@@ -55,8 +55,8 @@ fournir à la structure un réseau fonctionnel et structuré.}
 \item
   Maquette du projet
 \item
-  Dossier ou rapport décrivant l'architecture physique, les \texttt{VLAN},
-  l'adressage \texttt{IP}, les principaux points
+  Dossier ou rapport décrivant l'architecture physique, les \textabbrv{VLAN},
+  l'adressage \textabbrv{IP}, les principaux points
   de vérification du projet, des captures de trafic et différents
   scénarios permettant de valider les
   contraintes du cahier des charges (scénarios de routage, d'accès aux
@@ -67,4 +67,4 @@ fournir à la structure un réseau fonctionnel et structuré.}
 }
 
 % Mots-clés
-\ajoutSmotscles{Adressage \texttt{IP}, \texttt{VLAN}, \texttt{VTP}, routage inter-\texttt{VLAN}, \texttt{NAT}, \texttt{PAT}, \texttt{ACL}, \texttt{DNS}, \texttt{HTTP}, \texttt{SSH}, routage (vecteur de distance / état de lien), \texttt{PXE}, \texttt{TFTP}.}
+\ajoutSmotscles{Adressage \textabbrv{IP}, \textabbrv{VLAN}, \textabbrv{VTP}, routage inter-\textabbrv{VLAN}, \textabbrv{NAT}, \textabbrv{PAT}, \textabbrv{ACL}, \textabbrv{DNS}, \textabbrv{HTTP}, \textabbrv{SSH}, routage (vecteur de distance / état de lien), \textabbrv{PXE}, \textabbrv{TFTP}.}
