--- a/latex/saes/SAE21_exemple2.tex
+++ b/latex/saes/SAE21_exemple2.tex
@@ -14,7 +14,7 @@ Sa mission consiste à :
   dotée de services réseaux et
   de règles de sécurité.
 \item
-  Mettre en place une \texttt{DMZ} pour héberger les serveurs publics de
+  Mettre en place une \textabbrv{DMZ} pour héberger les serveurs publics de
   l'entreprise.
 \item
   Configurer l'accès à Internet.
@@ -26,17 +26,17 @@ Sa mission consiste à :
 
 \ajoutESdescription{
 L'objectif de cette SAÉ est de mettre en œuvre un réseau d'entreprise
-basé sur une architecture segmentée en \texttt{VLAN} qui intègre différents
-services réseaux. Certaines applications serveur (\texttt{HTTP}, \texttt{DHCP}, \texttt{SSH})
+basé sur une architecture segmentée en \textabbrv{VLAN} qui intègre différents
+services réseaux. Certaines applications serveur (\textabbrv{HTTP}, \textabbrv{DHCP}, \textabbrv{SSH})
 seront à installer et à configurer par l'étudiant et d'autres seront
-préalablement configurées (\texttt{DNS} notamment).\\
-Le concept de \texttt{DMZ} sera abordé et les mécanismes de translation d'adresse
+préalablement configurées (\textabbrv{DNS} notamment).\\
+Le concept de \textabbrv{DMZ} sera abordé et les mécanismes de translation d'adresse
 statique et dynamique seront traités. L'initiation au filtrage de flux
 sera également amenée au travers de cette séquence d'apprentissage.\\
 Un outil d'émulation est préférable à une solution matérielle afin que
 l'exercice puisse être construit progressivement au fur et à mesure des
 séances. Les logiciels d'émulation comme GNS3, VIRL, EVE-NG peuvent être
-utilisés et complétés avec VirtualBox ou \texttt{VM}ware. Il faut aussi que ces
+utilisés et complétés avec VirtualBox ou \textabbrv{VM}ware. Il faut aussi que ces
 outils soient mis à disposition des étudiants pour qu'ils puissent
 continuer le projet en dehors des heures encadrées.\\
 L'étudiant doit adopter une approche de type projet et découper son
@@ -47,26 +47,26 @@ résultats de commandes, acquisition de trames\ldots) obtenus devront
 L'infrastructure réseau est volontairement simple afin que l'étudiant
 puisse se concentrer sur des concepts fondamentaux. Cette architecture
 est constituée de 2 commutateurs d'accès (L2), d'un commutateur de
-distribution (L3) qui assure le routage inter-\texttt{VLAN} et d'un routeur
-passerelle qui fait office de pare-feu. Les services réseaux \texttt{HTTP}, DNS,
-\texttt{DHCP} et \texttt{SSH} sont installés sur des machines virtuelles.\\
+distribution (L3) qui assure le routage inter-\textabbrv{VLAN} et d'un routeur
+passerelle qui fait office de pare-feu. Les services réseaux \textabbrv{HTTP}, DNS,
+\textabbrv{DHCP} et \textabbrv{SSH} sont installés sur des machines virtuelles.\\
 A partir du cahier des charges fourni, l'étudiant sera amené à réaliser
 différentes activités dont voici quelques exemples :
 \begin{itemize}
 \item
   Plan d'adressage.
 \item
-  Création des \texttt{VLAN}.
+  Création des \textabbrv{VLAN}.
 \item
-  Routage inter-\texttt{VLAN}.
+  Routage inter-\textabbrv{VLAN}.
 \item
-  Mise en place de \texttt{VM}.
+  Mise en place de \textabbrv{VM}.
 \item
   Accès à Internet.
 \item
-  Configuration du serveur \texttt{DHCP}, \texttt{SSH} et \texttt{HTTP}.
+  Configuration du serveur \textabbrv{DHCP}, \textabbrv{SSH} et \textabbrv{HTTP}.
 \item
-  Ajout d'entrées au serveur \texttt{DNS}.
+  Ajout d'entrées au serveur \textabbrv{DNS}.
 \item
   Configuration du pare-feu (une règle de filtrage).
 \end{itemize}
@@ -77,7 +77,7 @@ encadrées, l'étudiant ou l'équipe, sera confronté aux formes
 pédagogiques suivantes :
 \begin{itemize}
 \item
-  Création d'un réseau segmenté en \texttt{VLAN} avec mise en place d'une \texttt{DMZ} et
+  Création d'un réseau segmenté en \textabbrv{VLAN} avec mise en place d'une \textabbrv{DMZ} et
   de services réseaux
 \item
   Élaboration d'une méthode efficace pour tester progressivement la
@@ -98,14 +98,14 @@ pédagogiques suivantes :
   \begin{itemize}
   \item
     un utilisateur interne à l'entreprise peut-il bénéficier des
-    services \texttt{HTTP}, \texttt{DNS} et \texttt{DHCP} internes et
+    services \textabbrv{HTTP}, \textabbrv{DNS} et \textabbrv{DHCP} internes et
     se connecter à Internet.
   \item
-    un utilisateur lambda peut-il accéder au serveur \texttt{HTTP} de
+    un utilisateur lambda peut-il accéder au serveur \textabbrv{HTTP} de
     l'entreprise depuis Internet ?
   \item
     l'administrateur réseau de l'entreprise peut-il gérer les
-    équipements à l'aide d'une connexion \texttt{SSH}
+    équipements à l'aide d'une connexion \textabbrv{SSH}
     dans l'entreprise et hors de l'entreprise ?
   \end{itemize}
 \item
