--- a/latex/saes/SAE22_exemple1.tex
+++ b/latex/saes/SAE22_exemple1.tex
@@ -2,34 +2,34 @@
 % Exemple de SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvelexemple{Analyse de lignes \texttt{ADSL}}
+\nouvelexemple{Analyse de lignes \textabbrv{ADSL}}
 
-\ajoutESproblematique{Les lignes \texttt{ADSL} peuvent être perturbées par des signaux parasites créés
+\ajoutESproblematique{Les lignes \textabbrv{ADSL} peuvent être perturbées par des signaux parasites créés
 par exemple par une alimentation défectueuse ou un moteur d'ascenseur
-avec des problèmes de \texttt{CEM}. Ces perturbateurs peuvent entraîner une
-déconnexion totale d'une ligne \texttt{ADSL} voir de toutes les lignes d'un
+avec des problèmes de \textabbrv{CEM}. Ces perturbateurs peuvent entraîner une
+déconnexion totale d'une ligne \textabbrv{ADSL} voir de toutes les lignes d'un
 immeuble. L'analyse spectrale et la recherche de ces perturbateurs est
 donc une fonction du maintien en condition opérationnelle de ces lignes.}
 
 \ajoutESdescription{
-La SAÉ porte sur l'analyse d'un signal \texttt{ADSL} dans le domaine spectral et
+La SAÉ porte sur l'analyse d'un signal \textabbrv{ADSL} dans le domaine spectral et
 pourra comporter jusqu'à 5 parties :
 \begin{itemize}
 \item
-  Affichage de la \texttt{FFT} d'un signal \texttt{ADSL} ou \texttt{ADSL}2+. On donnera par exemple
+  Affichage de la \textabbrv{FFT} d'un signal \textabbrv{ADSL} ou \textabbrv{ADSL}2+. On donnera par exemple
   le signal sous forme d'un fichier
   Excel (une colonne pour le temps et une pour l'amplitude, soit 2
   vecteurs) et l'étudiant devra afficher
-  la \texttt{FFT}.
+  la \textabbrv{FFT}.
 \item
   Détermination de la largeur de la bande montante et descendante
-  (changement de valeur de la \texttt{DSP}).
+  (changement de valeur de la \textabbrv{DSP}).
 \item
-  Détermination de la norme \texttt{ADSL} ou \texttt{ADSL}2+ (en fonction de la largeur de
+  Détermination de la norme \textabbrv{ADSL} ou \textabbrv{ADSL}2+ (en fonction de la largeur de
   bande descendante).
 \item
   Calcul de puissance de la bande montante et descendante (intégration
-  de la \texttt{DSP}).
+  de la \textabbrv{DSP}).
 \item
   Recherche d'un perturbateur électromagnétique : on donnera une autre
   capture avec un perturbateur
@@ -37,7 +37,7 @@ pourra comporter jusqu'à 5 parties :
   fréquence de ce perturbateur dans le
   spectre.
 \end{itemize}
-Le travail pourra s'appuyer sur une librairie pour calculer la \texttt{FFT} (par
+Le travail pourra s'appuyer sur une librairie pour calculer la \textabbrv{FFT} (par
 ex : \texttt{numpy} en Python) et une autre pour l'affichage d'une
 courbe (par ex : \texttt{matplotlib} en Python).
 }
