--- a/latex/saes/SAE22_exemple2.tex
+++ b/latex/saes/SAE22_exemple2.tex
@@ -25,9 +25,9 @@ Les exemples de signaux à étudier pourront être de type :
 \item
   téléphonie portable;
 \item
-  réception \texttt{TV} : \texttt{DVB-S} ou \texttt{DVB-T};
+  réception \textabbrv{TV} : \textabbrv{DVB-S} ou \textabbrv{DVB-T};
 \item
-  réception \texttt{FM} ou \texttt{DAB}.
+  réception \textabbrv{FM} ou \textabbrv{DAB}.
 \end{itemize}
 }
 
