--- a/latex/saes/SAE22_exemple3.tex
+++ b/latex/saes/SAE22_exemple3.tex
@@ -27,7 +27,7 @@ Les exemples de numérisation à comparer pourront être :
 \item
   de type audio en téléphonie;
 \item
-  de type audio avec une qualité \texttt{HiFi};
+  de type audio avec une qualité \textabbrv{HiFi};
 \item
   de type codec G711.
 \end{itemize}
