--- a/latex/saes/SAE23_exemple1.tex
+++ b/latex/saes/SAE23_exemple1.tex
@@ -35,7 +35,7 @@ la SAé pourra être mise en oeuvre avec différentes étapes :
   \item
     Utilisation d'une machine virtuelle ou accès à distance aux
     ressources (par ex : ferme ESX,
-    Proxmox, Guacamole, Docker, \ldots), partage par clés \texttt{USB}
+    Proxmox, Guacamole, Docker, \ldots), partage par clés \textabbrv{USB}
   \item
     Installation ou utilisation d'un serveur web non chiffré (type Nginx
     ou Apache)
@@ -49,7 +49,7 @@ la SAé pourra être mise en oeuvre avec différentes étapes :
   \item
     Algorithmique (script serveur, dépôt de codes)
   \item
-    Technologie Web (\texttt{HTML}, \texttt{CSS})
+    Technologie Web (\textabbrv{HTML}, \textabbrv{CSS})
   \item
     Base de données avec manipulation de données (ajout, suppression,
     modification)
