--- a/latex/saes/SAE23_exemple2.tex
+++ b/latex/saes/SAE23_exemple2.tex
@@ -40,7 +40,7 @@ la SAÉ pourra être mise en oeuvre avec différentes étapes :
   \item
     Utilisation d'une machine virtuelle ou accès à distance aux
     ressources (par ex : ferme ESX,
-    Proxmox, Guacamole, Docker, \ldots), partage par clés \texttt{USB}
+    Proxmox, Guacamole, Docker, \ldots), partage par clés \textabbrv{USB}
   \item
     Installation ou utilisation d'un serveur web non chiffré (type Nginx
     ou Apache)
@@ -54,7 +54,7 @@ la SAÉ pourra être mise en oeuvre avec différentes étapes :
   \item
     Algorithmique (script serveur, dépôt de codes)
   \item
-    Technologie Web (\texttt{HTML}, \texttt{CSS})
+    Technologie Web (\textabbrv{HTML}, \textabbrv{CSS})
   \item
     Base de données avec manipulation de données (ajout, suppression,
     modification)
@@ -75,7 +75,7 @@ la SAÉ pourra être mise en oeuvre avec différentes étapes :
 \item
   Site fonctionnel et dynamique
 \item
-  Données manipulées dans une \texttt{BDD} (ajout, suppression, modification)
+  Données manipulées dans une \textabbrv{BDD} (ajout, suppression, modification)
 \item
   Documentation technique, informative
 \item
