--- a/latex/saes/SAE24.tex
+++ b/latex/saes/SAE24.tex
@@ -26,7 +26,7 @@
 \ajoutSac{AC0211}{Mesurer et analyser les signaux}
 \ajoutSac{AC0212}{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}
 \ajoutSac{AC0213}{Déployer des supports de transmission}
-\ajoutSac{AC0214}{Connecter les systèmes de \texttt{ToIP}}
+\ajoutSac{AC0214}{Connecter les systèmes de \textabbrv{ToIP}}
 \ajoutSac{AC0215}{Communiquer avec un client ou un collaborateur}
 
 \ajoutScompetence{RT3-Programmer}{\niveauA}
@@ -77,9 +77,9 @@
 Dossier ou rapport d'étude\\
 Prototype ou montage\\
 Présentation orale avec diaporama\\
-Et / ou \texttt{QCM}\\
+Et / ou \textabbrv{QCM}\\
 Et / ou grille de suivi
 }
 
 % Mots-clés
-\ajoutSmotscles{Réseaux locaux, \texttt{LAN}, Programmation, Cybersécurité.}
+\ajoutSmotscles{Réseaux locaux, \textabbrv{LAN}, Programmation, Cybersécurité.}
