--- a/latex/saes/SAE24_exemple1.tex
+++ b/latex/saes/SAE24_exemple1.tex
@@ -6,13 +6,13 @@
 
 \ajoutESproblematique{Le réseau informatique domestique est une « petite » instance d'un
 réseau d'entreprise (par exemple, box, points d'accès wifi, réseaux du
-CROUS, modem, \texttt{4G}, ordinateurs, téléphonie, objets connectés).\\
+CROUS, modem, \textabbrv{4G}, ordinateurs, téléphonie, objets connectés).\\
 Dans cette SAÉ, l'étudiant devra comprendre l'agencement des briques
 télécoms (accès au réseau), des équipements (routeur, switch, firewall,
-WiFi), des terminaux (\texttt{PC}, smartphone, \ldots) et des protocoles (IP,
-\texttt{DHCP}, \texttt{DNS}, Mail, Web, \ldots) qui permettent le fonctionnement de son
+WiFi), des terminaux (\textabbrv{PC}, smartphone, \ldots) et des protocoles (IP,
+\textabbrv{DHCP}, \textabbrv{DNS}, Mail, Web, \ldots) qui permettent le fonctionnement de son
 réseau domestique.\\
-Il devra également reconnaître les \texttt{OS} des différents appareils connectés
+Il devra également reconnaître les \textabbrv{OS} des différents appareils connectés
 à ce réseau et décrire leurs caractéristiques, notamment en termes de
 sécurité.}
 
