--- a/latex/saes/SAE24_exemple3.tex
+++ b/latex/saes/SAE24_exemple3.tex
@@ -55,7 +55,7 @@ l'hygiène informatique en contexte professionnel.
 \ajoutESmodalite{\vspace{-5pt}
 \begin{itemize}
 \item
-  Une maquette autonome, réelle ou virtuelle, d'un réseau de \texttt{PME},
+  Une maquette autonome, réelle ou virtuelle, d'un réseau de \textabbrv{PME},
   intégrant des vulnérabilités et des
   outils permettant de les exploiter.
 \item
