--- a/latex/synthese/abbreviations.tex
+++ b/latex/synthese/abbreviations.tex
@@ -1,372 +1,372 @@
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{ACL}} & Access Control List\\ 
+\makebox[1.5cm][r]{\textabbrv{ACL}} & Access Control List\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{ADSL}} & Asymmetric Digital Subscriber Line\\ 
+\makebox[1.5cm][r]{\textabbrv{ADSL}} & Asymmetric Digital Subscriber Line\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{ALU}} & Arithmetic and Logic Unit\\ 
+\makebox[1.5cm][r]{\textabbrv{ALU}} & Arithmetic and Logic Unit\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{ANSSI}} & Agence nationale de la sécurité des systèmes d'information\\ 
+\makebox[1.5cm][r]{\textabbrv{ANSSI}} & Agence nationale de la sécurité des systèmes d'information\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{API}} & Application Programming Interface\\ 
+\makebox[1.5cm][r]{\textabbrv{API}} & Application Programming Interface\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{APC}} & Approche Par Compétence\\ 
+\makebox[1.5cm][r]{\textabbrv{APC}} & Approche Par Compétence\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{ARP}} & Address Resolution Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{ARP}} & Address Resolution Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{BDD}} & Base De Données\\ 
+\makebox[1.5cm][r]{\textabbrv{BDD}} & Base De Données\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{CAN}} & Convertisseur Analogique-Numérique\\ 
+\makebox[1.5cm][r]{\textabbrv{CAN}} & Convertisseur Analogique-Numérique\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{CC}} & Copie Carbone\\ 
+\makebox[1.5cm][r]{\textabbrv{CC}} & Copie Carbone\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{CCi}} & Copie Carbone invisible\\ 
+\makebox[1.5cm][r]{\textabbrv{CCi}} & Copie Carbone invisible\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{CEM}} & Compatibilité ÉlectroMagnétique\\ 
+\makebox[1.5cm][r]{\textabbrv{CEM}} & Compatibilité ÉlectroMagnétique\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{CNA}} & Convertisseur Numérique-Analogique\\ 
+\makebox[1.5cm][r]{\textabbrv{CNA}} & Convertisseur Numérique-Analogique\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{CNIL}} & Commission Nationale de l'Informatique et des Libertés\\ 
+\makebox[1.5cm][r]{\textabbrv{CNIL}} & Commission Nationale de l'Informatique et des Libertés\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{CIDR}} & Classless Inter-Domain Routing\\ 
+\makebox[1.5cm][r]{\textabbrv{CIDR}} & Classless Inter-Domain Routing\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{CSS}} & Cascading Style Sheets\\ 
+\makebox[1.5cm][r]{\textabbrv{CSS}} & Cascading Style Sheets\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{CSV}} & Comma-Separated Values\\ 
+\makebox[1.5cm][r]{\textabbrv{CSV}} & Comma-Separated Values\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{CV}} & Curriculum Vitae\\ 
+\makebox[1.5cm][r]{\textabbrv{CV}} & Curriculum Vitae\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{DDoS}} & Distributed Denial of Service\\ 
+\makebox[1.5cm][r]{\textabbrv{DDoS}} & Distributed Denial of Service\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{DHCP}} & Dynamic Host Configuration Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{DHCP}} & Dynamic Host Configuration Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{DMZ}} & DeMilitarized Zone\\ 
+\makebox[1.5cm][r]{\textabbrv{DMZ}} & DeMilitarized Zone\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{DNS}} & Domain Name System\\ 
+\makebox[1.5cm][r]{\textabbrv{DNS}} & Domain Name System\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{DOM}} & Document Object Model\\ 
+\makebox[1.5cm][r]{\textabbrv{DOM}} & Document Object Model\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{DSI}} & Direction des Systèmes d'Information\\ 
+\makebox[1.5cm][r]{\textabbrv{DSI}} & Direction des Systèmes d'Information\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{DSP}} & Densité Spectrale de Puissance\\ 
+\makebox[1.5cm][r]{\textabbrv{DSP}} & Densité Spectrale de Puissance\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{DAB}} & Digital Audio Broadcasting\\ 
+\makebox[1.5cm][r]{\textabbrv{DAB}} & Digital Audio Broadcasting\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{DVB-S}} & Digital Video Broadcasting Satellite\\ 
+\makebox[1.5cm][r]{\textabbrv{DVB-S}} & Digital Video Broadcasting Satellite\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{DVB-T}} & Digital Video Broadcasting Terrestre\\ 
+\makebox[1.5cm][r]{\textabbrv{DVB-T}} & Digital Video Broadcasting Terrestre\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{EMILE}} & Enseignement d'une Matière par l'Intégration d'une Langue Etrangère\\ 
+\makebox[1.5cm][r]{\textabbrv{EMILE}} & Enseignement d'une Matière par l'Intégration d'une Langue Etrangère\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{FFT}} & Fast Fourier Transform\\ 
+\makebox[1.5cm][r]{\textabbrv{FFT}} & Fast Fourier Transform\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{FM}} & Frequency Modulation\\ 
+\makebox[1.5cm][r]{\textabbrv{FM}} & Frequency Modulation\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{FO}} & Fibre Optique\\ 
+\makebox[1.5cm][r]{\textabbrv{FO}} & Fibre Optique\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{FOVI}} & Faux Ordres de Virements Internationaux\\ 
+\makebox[1.5cm][r]{\textabbrv{FOVI}} & Faux Ordres de Virements Internationaux\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{FTP}} & File Transfer Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{FTP}} & File Transfer Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{GBF}} & Générateur de Basses Fréquences\\ 
+\makebox[1.5cm][r]{\textabbrv{GBF}} & Générateur de Basses Fréquences\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{GPIO}} & General Purpose Input/Output\\ 
+\makebox[1.5cm][r]{\textabbrv{GPIO}} & General Purpose Input/Output\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{HiFi}} & High Fidelity\\ 
+\makebox[1.5cm][r]{\textabbrv{HiFi}} & High Fidelity\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{HTML}} & HyperText Markup Language\\ 
+\makebox[1.5cm][r]{\textabbrv{HTML}} & HyperText Markup Language\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{HTTP}} & Hypertext Transfer Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{HTTP}} & Hypertext Transfer Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{ICMP}} & Internet Control Message Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{ICMP}} & Internet Control Message Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{IMAP}} & Internet Message Access Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{IMAP}} & Internet Message Access Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{IP}} & Internet Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{IP}} & Internet Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{IPBX}} & Internet Protocol Private Branch eXchange\\ 
+\makebox[1.5cm][r]{\textabbrv{IPBX}} & Internet Protocol Private Branch eXchange\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{JSON}} & JavaScript Object Notation\\ 
+\makebox[1.5cm][r]{\textabbrv{JSON}} & JavaScript Object Notation\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{LAN}} & Local Area Network\\ 
+\makebox[1.5cm][r]{\textabbrv{LAN}} & Local Area Network\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{LED}} & Light-Emitting Diode\\ 
+\makebox[1.5cm][r]{\textabbrv{LED}} & Light-Emitting Diode\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{MAC}} & Media Access Control\\ 
+\makebox[1.5cm][r]{\textabbrv{MAC}} & Media Access Control\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{MOOC}} & Massive Open Online Course\\ 
+\makebox[1.5cm][r]{\textabbrv{MOOC}} & Massive Open Online Course\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{NAS}} & Network Attached Storage\\ 
+\makebox[1.5cm][r]{\textabbrv{NAS}} & Network Attached Storage\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{NAT}} & Network Address Translation\\ 
+\makebox[1.5cm][r]{\textabbrv{NAT}} & Network Address Translation\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{NDP}} & Neighbor Discovery Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{NDP}} & Neighbor Discovery Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{NTP}} & Network Time Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{NTP}} & Network Time Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{OS}} & Operating System\\ 
+\makebox[1.5cm][r]{\textabbrv{OS}} & Operating System\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{OSPF}} & Open Shortest Path First\\ 
+\makebox[1.5cm][r]{\textabbrv{OSPF}} & Open Shortest Path First\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{PABX}} & Private Automatic Branch Exchange\\ 
+\makebox[1.5cm][r]{\textabbrv{PABX}} & Private Automatic Branch Exchange\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{PAT}} & Port Address Translation\\ 
+\makebox[1.5cm][r]{\textabbrv{PAT}} & Port Address Translation\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{PC}} & Personnal Computer\\ 
+\makebox[1.5cm][r]{\textabbrv{PC}} & Personnal Computer\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{PERT}} & Program Evaluation and Review Technology\\ 
+\makebox[1.5cm][r]{\textabbrv{PERT}} & Program Evaluation and Review Technology\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{PME}} & Petite et Moyenne Entreprise\\ 
+\makebox[1.5cm][r]{\textabbrv{PME}} & Petite et Moyenne Entreprise\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{PoE}} & Power over Ethernet\\ 
+\makebox[1.5cm][r]{\textabbrv{PoE}} & Power over Ethernet\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{POP}} & Post Office Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{POP}} & Post Office Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{PPP}} & Projet Professionnel et Personnel\\ 
+\makebox[1.5cm][r]{\textabbrv{PPP}} & Projet Professionnel et Personnel\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{PXE}} & Pre-boot eXecution Environment\\ 
+\makebox[1.5cm][r]{\textabbrv{PXE}} & Pre-boot eXecution Environment\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{QCM}} & Questionnaire à Choix Multiples\\ 
+\makebox[1.5cm][r]{\textabbrv{QCM}} & Questionnaire à Choix Multiples\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{RGPD}} & Règlement Général pour la Protection des Données\\ 
+\makebox[1.5cm][r]{\textabbrv{RGPD}} & Règlement Général pour la Protection des Données\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{RSTP}} & Rapid Spanning Tree Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{RSTP}} & Rapid Spanning Tree Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{RTP}} & Real-Time Transport Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{RTP}} & Real-Time Transport Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{SGBD}} & Système de Gestion de Bases de Données\\ 
+\makebox[1.5cm][r]{\textabbrv{SGBD}} & Système de Gestion de Bases de Données\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{SMTP}} & Simple Mail Transfer Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{SMTP}} & Simple Mail Transfer Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{SQL}} & Structured Query Language\\ 
+\makebox[1.5cm][r]{\textabbrv{SQL}} & Structured Query Language\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{SSH}} & Secure SHell\\ 
+\makebox[1.5cm][r]{\textabbrv{SSH}} & Secure SHell\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{STP}} & Spanning Tree Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{STP}} & Spanning Tree Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{TELNET}} & TELecommunication NETwork\\ 
+\makebox[1.5cm][r]{\textabbrv{TELNET}} & TELecommunication NETwork\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{TCP}} & Transmission Control Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{TCP}} & Transmission Control Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{TDM}} & Time Division Multiplexing\\ 
+\makebox[1.5cm][r]{\textabbrv{TDM}} & Time Division Multiplexing\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{TFTP}} & Trivial File Transfer Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{TFTP}} & Trivial File Transfer Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{ToIP}} & Telephony over Internet Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{ToIP}} & Telephony over Internet Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{TV}} & TéléVision\\ 
+\makebox[1.5cm][r]{\textabbrv{TV}} & TéléVision\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{UDP}} & User Datagram Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{UDP}} & User Datagram Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{UML}} & Unified Modeling Language\\ 
+\makebox[1.5cm][r]{\textabbrv{UML}} & Unified Modeling Language\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{URL}} & Uniform Resource Locator\\ 
+\makebox[1.5cm][r]{\textabbrv{URL}} & Uniform Resource Locator\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{USB}} & Universal Serial Bus\\ 
+\makebox[1.5cm][r]{\textabbrv{USB}} & Universal Serial Bus\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{VLAN}} & Virtual Local Area Network\\ 
+\makebox[1.5cm][r]{\textabbrv{VLAN}} & Virtual Local Area Network\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{VLSM}} & Variable-Length Subnet Masking\\ 
+\makebox[1.5cm][r]{\textabbrv{VLSM}} & Variable-Length Subnet Masking\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{VM}} & Virtual Machine\\ 
+\makebox[1.5cm][r]{\textabbrv{VM}} & Virtual Machine\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{VRF}} & Virtual Routing Forwarding\\ 
+\makebox[1.5cm][r]{\textabbrv{VRF}} & Virtual Routing Forwarding\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{VTP}} & VLAN Trunking Protocol\\ 
+\makebox[1.5cm][r]{\textabbrv{VTP}} & VLAN Trunking Protocol\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{xDSL}} & x Digital Subscriber Line\\ 
+\makebox[1.5cm][r]{\textabbrv{xDSL}} & x Digital Subscriber Line\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{XML}} & eXtensible Markup Language\\ 
+\makebox[1.5cm][r]{\textabbrv{XML}} & eXtensible Markup Language\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{XSS}} & cross-Site Scripting\\ 
+\makebox[1.5cm][r]{\textabbrv{XSS}} & cross-Site Scripting\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{2D}} & deux Dimensions\\ 
+\makebox[1.5cm][r]{\textabbrv{2D}} & deux Dimensions\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{3D}} & trois Dimensions\\ 
+\makebox[1.5cm][r]{\textabbrv{3D}} & trois Dimensions\\ 
 \end{tabular}
 
 \begin{tabular}{rp{6.5cm}} 
-\makebox[1.5cm][r]{\texttt{4G}} & 4th Generation\\ 
+\makebox[1.5cm][r]{\textabbrv{4G}} & 4th Generation\\ 
 \end{tabular}
 
