--- a/latex/ressources/R102.tex
+++ b/latex/ressources/R102.tex
@@ -51,9 +51,9 @@ les notions de services rendus et de performance du réseau.}
 \item
   Approche en couches et encapsulation.
 \item
-  Étude détaillée des protocoles Ethernet, \texttt{ARP}, \texttt{ICMP}.
+  Étude détaillée des protocoles Ethernet, \textabbrv{ARP}, \textabbrv{ICMP}.
 \item
-  Découverte des protocoles \texttt{IP}v4, \texttt{IP}v6, \texttt{ICMP}v6, \texttt{TCP}, \texttt{UDP} et des
+  Découverte des protocoles \textabbrv{IP}v4, \textabbrv{IP}v6, \textabbrv{ICMP}v6, \textabbrv{TCP}, \textabbrv{UDP} et des
   protocoles applicatifs.
 \item
   Topologies de réseaux.
@@ -69,11 +69,11 @@ Des éléments relatifs à la sécurité et aux risques informatiques et
 réseaux seront progressivement introduits au travers des différents
 contenus étudiés afin que ces éléments deviennent une préoccupation
 routinière. Les éléments de cybersécurité pourront être abordés via des
-exemples tels que l'\emph{arp-spoofing}, la prise d'empreintes via \texttt{ICMP},
+exemples tels que l'\emph{arp-spoofing}, la prise d'empreintes via \textabbrv{ICMP},
 des captures, la génération et analyse de trames. Des liens avec les
 aspects sécurité informatique et réseaux mentionnés en R101 seront
 également faits.
 }
 
 % Mots-clés
-\ajoutRmotscles{Architecture en couches, Topologies, Protocoles, Modèle \texttt{TCP}/\texttt{IP}.}
+\ajoutRmotscles{Architecture en couches, Topologies, Protocoles, Modèle \textabbrv{TCP}/\textabbrv{IP}.}
