--- a/latex/ressources/R106.tex
+++ b/latex/ressources/R106.tex
@@ -51,13 +51,13 @@ permettra aux étudiants de relier ces systèmes au monde extérieur.}
   Codage des nombres, des caractères, des images.
 \item
   Fonctions logiques - Logique combinatoire et séquentielle - Notion
-  d'\texttt{ALU}.
+  d'\textabbrv{ALU}.
 \item
   Structure d'un processeur - Différents types de mémoires.
 \item
-  Périphériques et entrées-sorties (par ex : \texttt{GPIO}, liaison série).
+  Périphériques et entrées-sorties (par ex : \textabbrv{GPIO}, liaison série).
 \end{itemize}
 }
 
 % Mots-clés
-\ajoutRmotscles{Nombres binaires, Codage, Fonctions logiques, Processeur, \texttt{ALU}.}
+\ajoutRmotscles{Nombres binaires, Codage, Fonctions logiques, Processeur, \textabbrv{ALU}.}
