--- a/latex/ressources/R201.tex
+++ b/latex/ressources/R201.tex
@@ -48,7 +48,7 @@ Elle contribue aussi à la compétence ``Créer des outils et applications
 informatiques pour les R\&T'' (RT3) à travers la découverte du poste
 client et de son environnement logiciel.\\
 On introduira des notions de sécurité informatique (les ressources
-associées aux recommandations de l'\texttt{ANSSI}, CyberEdu, CyberMalveillance
+associées aux recommandations de l'\textabbrv{ANSSI}, CyberEdu, CyberMalveillance
 pourront servir de support)}
 
 % Contenus
@@ -56,17 +56,17 @@ pourront servir de support)}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Protocole et adressage \texttt{IP}v4\&6.
+  Protocole et adressage \textabbrv{IP}v4\&6.
 \item
-  Traduction d'adresses (\texttt{NAT}/PAT).
+  Traduction d'adresses (\textabbrv{NAT}/PAT).
 \item
-  Routage statique et routage dynamique (\texttt{OSPF}).
+  Routage statique et routage dynamique (\textabbrv{OSPF}).
 \item
-  \texttt{TCP}, \texttt{UDP}.
+  \textabbrv{TCP}, \textabbrv{UDP}.
 \item
-  Politiques de filtrage \texttt{ACL}.
+  Politiques de filtrage \textabbrv{ACL}.
 \end{itemize}
 }
 
 % Mots-clés
-\ajoutRmotscles{Plan d'adressage, Routage état de lien, Stratégies de filtrage, \texttt{CIDR}, \texttt{VLSM}, Agrégation de routes, \texttt{IP}v6, \texttt{NDP}.}
+\ajoutRmotscles{Plan d'adressage, routage état de lien, stratégies de filtrage, \textabbrv{CIDR}, \textabbrv{VLSM}, agrégation de routes, \textabbrv{IP}v6, \textabbrv{NDP}.}
