--- a/latex/ressources/R209.tex
+++ b/latex/ressources/R209.tex
@@ -48,7 +48,7 @@ Il doit en appréhender tous les éléments : il doit aussi bien connaître
 les protocoles de communication du Web que veiller à la sécurité de
 ceux-ci. Il doit également pouvoir accéder, traiter et afficher des
 informations provenant de différentes sources de données telles que des
-\texttt{SGBD}, des \texttt{API} ou des fichiers structurés. La présente ressource
+\textabbrv{SGBD}, des \textabbrv{API} ou des fichiers structurés. La présente ressource
 contribue de fait aux apprentissages critiques mentionnés précédemment.}
 
 % Contenus
@@ -56,31 +56,31 @@ contribue de fait aux apprentissages critiques mentionnés précédemment.}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Introduction au protocole \texttt{HTTP}.
+  Introduction au protocole \textabbrv{HTTP}.
 \item
   Mise en forme de pages Web :
   \begin{itemize}
   \item
-    Balises \texttt{HTML} avancées;
+    Balises \textabbrv{HTML} avancées;
   \item
-    Structure d'une page avec son \texttt{DOM};
+    Structure d'une page avec son \textabbrv{DOM};
   \item
-    \texttt{CSS} avancé ou \emph{Framework};
+    \textabbrv{CSS} avancé ou \emph{Framework};
   \item
     Initiation au dynamisme côté client (JavaScript, jQuery, \ldots).
   \end{itemize}
 \item
   Scripts côté serveur.
 \item
-  Éléments d'interaction client-serveur (requête \texttt{HTTP}, \texttt{URL}, formulaire).
+  Éléments d'interaction client-serveur (requête \textabbrv{HTTP}, \textabbrv{URL}, formulaire).
 \item
-  Interrogation d'un \texttt{SGBD} ou d'une \texttt{API}.
+  Interrogation d'un \textabbrv{SGBD} ou d'une \textabbrv{API}.
 \item
-  Sensibilisation à la sécurisation de sites : failles \texttt{XSS}/\texttt{XSS}
-  stockée/injections \texttt{SQL}.
+  Sensibilisation à la sécurisation de sites : failles \textabbrv{XSS}/\textabbrv{XSS}
+  stockée/injections \textabbrv{SQL}.
 \end{itemize}
 L'utilisation de l'anglais est préconisée dans la documentation du code.
 }
 
 % Mots-clés
-\ajoutRmotscles{Web, Développement, Algorithmes, \texttt{SGBD}, \texttt{API}, Sécurité, Environnement client-serveur.}
+\ajoutRmotscles{Web, Développement, Algorithmes, \textabbrv{SGBD}, \textabbrv{API}, Sécurité, Environnement client-serveur.}
