--- a/latex/saes/SAE12_exemple4.tex
+++ b/latex/saes/SAE12_exemple4.tex
@@ -6,8 +6,8 @@
 
 \ajoutESproblematique{Il s'agit de configurer un RaspberryPI pour que l'on puisse le
 programmer sans avoir à toujours y brancher un écran et un clavier mais
-en y accédant simplement en \texttt{SSH}, peu important le réseau sur lequel il
-est connecté. On peut placer sur le Raspberry une \texttt{LED} qui s'allumerait
+en y accédant simplement en \textabbrv{SSH}, peu important le réseau sur lequel il
+est connecté. On peut placer sur le Raspberry une \textabbrv{LED} qui s'allumerait
 et pour les plus avancés une photoRésistance (avec un pont diviseur
 entre photorésistance et une résistance de 10kOhms) pour récupérer la
 valeur de la luminosité ambiante.}
@@ -19,19 +19,19 @@ Les étapes à réaliser seraient les suivantes :
 \begin{itemize}
 \item
   Connecter un Raspberry PI avec un clavier un écran et récupérer son
-  adresse \texttt{MAC}.
+  adresse \textabbrv{MAC}.
 \item
   Changer le login et le mot de passe par défaut.
 \item
-  Activer \texttt{SSH} sur le Raspberry PI. Récupérer l'adresse \texttt{IP} en \texttt{DHCP}. Voir
-  comment accéder en \texttt{SSH}.
+  Activer \textabbrv{SSH} sur le Raspberry PI. Récupérer l'adresse \textabbrv{IP} en \textabbrv{DHCP}. Voir
+  comment accéder en \textabbrv{SSH}.
 \item
   Débrancher le Raspberry PI et le brancher sur un autre réseau
   ailleurs. Puis utiliser les commandes
-  \texttt{SSH} pour retrouver l'adresse de la carte sur le nouveau réseau et
+  \textabbrv{SSH} pour retrouver l'adresse de la carte sur le nouveau réseau et
   communiquer avec elle.
 \item
-  Utiliser via \texttt{SSH} le Raspberry PI pour allumer la \texttt{LED} qui est connectée
+  Utiliser via \textabbrv{SSH} le Raspberry PI pour allumer la \textabbrv{LED} qui est connectée
   et pour les plus avancés récupérer
   la valeur du capteur (Photorésistance) pour évaluer la luminosité dans
   la pièce où on a placé la carte.
