--- a/latex/saes/SAE13_exemple1.tex
+++ b/latex/saes/SAE13_exemple1.tex
@@ -8,7 +8,7 @@
 (atténuation, bande passante, catégorie ou norme) et/ou analyser un
 schéma de câblage cuivre, de caractériser par des mesures le support
 cuivre (retard de propagation, atténuation, continuité, échos, bruit,
-perturbations, identifier un défaut) voire de certifier un câblage \texttt{LAN}
+perturbations, identifier un défaut) voire de certifier un câblage \textabbrv{LAN}
 cuivre afin de comprendre les principaux critères de choix d'un support
 et/ou de savoir présenter des résultats à un client ou un collaborateur.\\
 L'étudiant saura mobiliser les compétences pour réaliser des mesures ou
@@ -41,7 +41,7 @@ Exemples de mise en oeuvre :
 \item
   Mesure temporelle (échelon, sinus), retard de propagation,
   atténuation,échos (réflexion), perturbations,
-  (\texttt{GBF}, oscillo, câble);
+  (\textabbrv{GBF}, oscillo, câble);
 \item
   Vérifier la conformité par rapport à un cahier des charges, une norme,
   ou une réglementation, comme
@@ -71,7 +71,7 @@ On pourra s'appuyer sur:
 \item
   rapport de mesures ;
 \item
-  \texttt{QCM} sur les mesures;
+  \textabbrv{QCM} sur les mesures;
 \item
   grille de suivi du travail;
 \item
