--- a/latex/saes/SAE13_exemple3.tex
+++ b/latex/saes/SAE13_exemple3.tex
@@ -8,7 +8,7 @@
 de mesure et/ou de mettre en place une liaison radio et/ou d'analyser la
 structure d'une liaison radio, de caractériser par des mesures le
 support radio (atténuation, effet des interférences, \ldots) voire de
-certifier un câblage \texttt{LAN}. L'étudiant pourra ainsi comprendre les
+certifier un câblage \textabbrv{LAN}. L'étudiant pourra ainsi comprendre les
 principaux critères de choix d'un support et/ou de savoir présenter des
 résultats à un client ou un collaborateur.\\
 L'étudiant saura mobiliser les compétences pour réaliser des mesures ou
@@ -53,7 +53,7 @@ On pourra s'appuyer sur:
 \item
   rapport de mesures ;
 \item
-  \texttt{QCM} sur les mesures;
+  \textabbrv{QCM} sur les mesures;
 \item
   grille de suivi du travail;
 \item
