--- a/latex/saes/SAE21_exemple1.tex
+++ b/latex/saes/SAE21_exemple1.tex
@@ -2,7 +2,7 @@
 % Exemple de SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvelexemple{Construction de réseau routé (statique/dynamique), routage inter-\texttt{VLAN} :  approche matérielle ou virtuelle}
+\nouvelexemple{Construction de réseau routé (statique/dynamique), routage inter-\textabbrv{VLAN} :  approche matérielle ou virtuelle}
 
 \ajoutESproblematique{\vspace{-5pt}
 \begin{itemize}
@@ -13,7 +13,7 @@
   Élaborer une méthode efficace pour tester progressivement la
   configuration réalisée.
 \item
-  Construire un réseau local virtuel \texttt{VLAN}.
+  Construire un réseau local virtuel \textabbrv{VLAN}.
 \item
   Intercepter un trafic entre 2 ordinateurs et identifier le chemin
   utilisé.
@@ -24,7 +24,7 @@
 \ajoutESdescription{
 L'objectif est de construire un réseau local de niveau 2 (commutation)
 et 3 (routage) en introduisant le concept de réseau local virtuel
-(\texttt{VLAN}). Le réseau répondra à un besoin d'entreprise ``simple'', par ex:
+(\textabbrv{VLAN}). Le réseau répondra à un besoin d'entreprise ``simple'', par ex:
 le réseau d'une entreprise localisée dans 3 villes différentes. Un outil
 d'émulation est utilisé avec production d'un projet enregistrable pour
 que l'exercice puisse être construit progressivement au fur et à mesure
@@ -32,10 +32,10 @@ des séances. L'étudiant doit s'organiser pour construire par étapes son
 réseau et surtout vérifier à chaque étape que l'ajout qu'il vient
 d'effectuer permet au réseau de toujours fonctionner.\\
 Développement et configuration d'une architecture de réseau d'entreprise
-simple composée de 6 \texttt{VLAN} et 3 routeurs.\\
+simple composée de 6 \textabbrv{VLAN} et 3 routeurs.\\
 Équipements réseau : 4 switches et 3 routeurs.\\
-Extension possible : effectuer du \texttt{VRF}, ajouter des tunnels, introduire
-un \texttt{NAT}, effectuer du filtrage sur un \texttt{VLAN} spécifique.\\
+Extension possible : effectuer du \textabbrv{VRF}, ajouter des tunnels, introduire
+un \textabbrv{NAT}, effectuer du filtrage sur un \textabbrv{VLAN} spécifique.\\
 Préconisations :
 \begin{itemize}
 \item
@@ -59,7 +59,7 @@ Préconisations :
 \item
   Vérification d'une interconnexion complète.
 \item
-  Vérification de la sécurisation/isolement d'un \texttt{VLAN} vis à vis des
+  Vérification de la sécurisation/isolement d'un \textabbrv{VLAN} vis à vis des
   autres postes clients.
 \item
   Démontrer à l'aide d'un document le respect du cahier des charges,
