--- a/latex/saes/SAE21_exemple3.tex
+++ b/latex/saes/SAE21_exemple3.tex
@@ -21,9 +21,9 @@ embarqué quand le bootloader (U-boot) est accessible. La mise en oeuvre
 comprend :
 \begin{itemize}
 \item
-  Démarrage réseau (\texttt{PXE}) pour charger un bootloader (\texttt{PXE} Linux).
+  Démarrage réseau (\textabbrv{PXE}) pour charger un bootloader (\textabbrv{PXE} Linux).
 \item
-  Configuration d'un serveur \texttt{TFTP} (\texttt{tftpd-hpa}).
+  Configuration d'un serveur \textabbrv{TFTP} (\texttt{tftpd-hpa}).
 \item
   Modification du fichier de configuration pour choisir le mode
   (utilisation normale / installation).
@@ -46,8 +46,8 @@ encadrées, l'étudiant ou l'équipe, sera confronté aux formes
 pédagogiques suivantes :
 \begin{itemize}
 \item
-  Mise en place un serveur \texttt{TFTP} et permettre aux machines clientes de
-  démarrer sur le réseau (\texttt{PXE}) pour
+  Mise en place un serveur \textabbrv{TFTP} et permettre aux machines clientes de
+  démarrer sur le réseau (\textabbrv{PXE}) pour
   récupérer une image du système d'exploitation.
 \item
   Élaboration d'une méthode efficace pour tester progressivement la
