--- a/latex/styles.tex
+++ b/latex/styles.tex
@@ -53,3 +53,18 @@
   {}
   {}
 \makeatother  
+
+
+% Les mots "abbréviations"
+\def\textabbrv{\textsc}
+
+% Boite pour page de titre
+\definecolor{mycolor}{rgb}{0.122, 0.435, 0.698}
+
+\newmdenv[innerlinewidth=0.5pt, roundcorner=4pt,linecolor=mycolor,      innerleftmargin=6pt,
+innerrightmargin=6pt,
+innertopmargin=6pt,
+innerbottommargin=6pt,
+leftmargin=15mm,
+rightmargin=15mm
+]{boitepagetitre}
